# rust-axum-graphql-1

./: Cargo.toml
async-graphql-axum/: Cargo.toml
model/: Cargo.toml
model/src/: author.rs  book.rs  dummy_data.rs  lib.rs
src/: handler.rs  main.rs
