[package]
name = "axum-grahpql-1"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "4.0.4"
async-trait = "0.1.56"
axum = "0.5.12"
axum-macros = "0.2.3"
serde = { version = "1.0.138", features = ["derive"]}
serde_json = "1.0.82"
tokio = {version = "1.19.2", features = ["full"]}
uuid = "1.1.2"
async-graphql-axum = {path = "./async-graphql-axum"}
model = {path = "./model"}


[workspace]
members = [
  "model",
  "async-graphql-axum"
]
